tui/src/pager/snapshots/tui__pager__diff__tests__diff_change.snap
---
source: tui/src/pager/diff.rs
assertion_line: 354
expression: terminal.backend()
---
"-old               |+new                "
"                   |                    "
"                   |                    "
"                   |                    "
"(1/1) (+1 -1)    /t/n/.t          h help"
