tui/src/pager/snapshots/tui__pager__diff__tests__diff_delete.snap
---
source: tui/src/pager/diff.rs
assertion_line: 354
expression: terminal.backend()
---
" keep              | keep               "
"-remove            |                    "
"                   |                    "
"                   |                    "
"(1/1) (+0 -1)    /t/n/.t          h help"
