tui/src/pager/snapshots/tui__pager__diff__tests__diff_empty.snap
---
source: tui/src/pager/diff.rs
assertion_line: 354
expression: terminal.backend()
---
"                   |                    "
"                   |                    "
"                   |                    "
"                   |                    "
"(1/1) (+0 -0)    /t/n/.t          h help"
