tui/src/pager/snapshots/tui__pager__diff__tests__diff_equal.snap
---
source: tui/src/pager/diff.rs
assertion_line: 354
expression: terminal.backend()
---
" hello             | hello              "
" world             | world              "
"                   |                    "
"                   |                    "
"(1/1) (+0 -0)    /t/n/.t          h help"
