tui/src/pager/snapshots/tui__pager__diff__tests__diff_scroll.snap
---
source: tui/src/pager/diff.rs
assertion_line: 408
expression: terminal.backend()
---
" line 6            | line 6             "
" line 7            | line 7             "
" line 8            | line 8             "
" line 9            | line 9             "
" line 10           | line 10            "
" line 11           | line 11            "
" line 12           | line 12            "
" line 13           | line 13            "
" line 14           | line 14            "
"(6/12) (+0 -0)   /t/n/.t          h help"
